projects/hcp/backend/k8s-config/sit/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hcp-backend
  name: hcp-backend-svc
  namespace: hcp-sit
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: hcp-backend
